@@ -12,40 +12,40 @@ import math
 import khmer.utils
 
 
-def estimate_optimal_with_N_and_M(N, M):
+def estimate_optimal_with_K_and_M(K, M):
     """
     Utility function for estimating optimal counting table args where N is the
     number of unique kmer and M is the allotted amount of memory
     """
-    Z = math.log(2)*(M/float(N))
-    intZ = int(Z)
-    if intZ == 0:
-        intZ = 1
-    H = int(M/intZ)
-    M = H*intZ
-    f2 = (1-math.exp(-N/float(H)))**intZ
+    N = math.log(2)*(M/float(K))
+    intN = int(N)
+    if intN == 0:
+        intN = 1
+    X = int(M/intN)
+    M = X*intN
+    f2 = (1-math.exp(-K/float(X)))**intN
     res = namedtuple("result", ["num_htables", "htable_size", "mem_use",
                                 "fp_rate"])
-    return res(intZ, H, M, f2)
+    return res(intN, X, M, f2)
 
 
-def estimate_optimal_with_N_and_f(N, f):
+def estimate_optimal_with_K_and_f(K, f):
     """
     Utility function for estimating optimal memory where N is the number of
     unique kmers and f is the desired false positive rate
     """
-    Z = math.log(f, 0.5)
-    intZ = int(Z)
-    if intZ == 0:
-        intZ = 1
+    N = math.log(f, 0.5)
+    intN = int(N)
+    if intN == 0:
+        intN = 1
 
-    H1 = int(-N/(math.log(1-f**(1/float(intZ)))))
-    M1 = H1 * intZ
-    f1 = (1-math.exp(-N/float(H1)))**intZ
+    H1 = int(-K/(math.log(1-f**(1/float(intN)))))
+    M1 = H1 * intN
+    f1 = (1-math.exp(-K/float(H1)))**intN
 
     res = namedtuple("result", ["num_htables", "htable_size", "mem_use",
                                 "fp_rate"])
-    return res(intZ, H1, M1, f1)
+    return res(intN, H1, M1, f1)
 
 
 def optimal_args_output_gen(unique_kmers, fp_rate):
@@ -63,7 +63,7 @@ def optimal_args_output_gen(unique_kmers, fp_rate):
                     'expected_memory_usage')
 
     for fp_rate in range(1, 10):
-        Z, H, M, f = estimate_optimal_with_N_and_f(unique_kmers, fp_rate/10.0)
+        Z, H, M, f = estimate_optimal_with_K_and_f(unique_kmers, fp_rate/10.0)
         to_print.append('{:11.3f}\t{:19}\t{:17e}\t{:21e}'.format(f, Z, H, M))
 
     mem_list = [1, 5, 10, 20, 50, 100, 200, 300, 400, 500, 1000, 2000, 5000]
@@ -74,7 +74,7 @@ def optimal_args_output_gen(unique_kmers, fp_rate):
                     'size_hashtable(H)\texpected_fp')
 
     for mem in mem_list:
-        Z, H, M, f = estimate_optimal_with_N_and_M(unique_kmers,
+        Z, H, M, f = estimate_optimal_with_K_and_M(unique_kmers,
                                                    mem*1000000000)
         to_print.append('{:21e}\t{:19}\t{:17e}\t{:11.3f}'.format(M, Z, H, f))
     return "\n".join(to_print)
