@@ -1,3 +1,13 @@
+2015-07-05  Jacob Fenton  <bocajnotnef@gmail.com>
+
+   * oxli/functions.py: changed estimate functions to use correct letter
+   abbreviations
+   * sandbox/estimate_optimal_hash.py: changed to use renamed estimate 
+   functions
+   * sandbox/unique-kmers.py: changed to not output reccomended HT args by
+   default
+   * tests/test_oxli_functions.py: changed to use renamed estimate functions
+
 2015-07-05  Michael R. Crusoe  <crusoe@ucdavis.edu>
 
    * sandbox/{collect-variants,optimal_args_hashbits,sweep-files}.py:
